--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,33 @@
+attrs==21.2.0
+certifi==2021.5.30
+chardet==4.0.0
+charset-normalizer==2.0.5
+colorlog==6.4.1
 cycler==0.10.0
+idna==3.2
+jsonschema==3.2.0
 kiwisolver==1.3.2
+lxml==4.6.3
 matplotlib==3.4.3
+mpmath==1.2.1
+msgpack==1.0.2
+networkx==2.6.3
 numpy==1.21.2
 numpy-stl==2.16.3
 Pillow==8.3.2
+pycollada==0.7.1
+pyglet==1.5.20
 pyparsing==2.4.7
+pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-utils==2.5.6
+requests==2.26.0
+Rtree==0.9.7
+scipy==1.7.1
+Shapely==1.7.1
 six==1.16.0
+svg.path==4.1
+sympy==1.8
+trimesh==3.9.29
+urllib3==1.26.6
+xxhash==2.0.2
